Added ACT average cost and max quantity to tiles.

--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -164,7 +164,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Average ACT cost:</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">£</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">£ {{ tile_data[2] }}</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-pound-sign fa-2x text-gray-300"></i>
@@ -185,6 +185,7 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
                           <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">%</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">{{ tile_data[1] }}</div>
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
