Added text to the about section

--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -329,7 +329,13 @@
                   <h6 class="m-0 font-weight-bold text-primary">About the prescribing dashboard</h6>
                 </div>
                 <div class="card-body">
-                  <p>?</p>
+                  <p> <b> Prescribing dashboards </b> </br />
+                    <br /> OpenPrescribing is a collection of data, published monthly by various NHS authorities, which has been aggregated together to provide an interface to the raw English prescribing data in primary care. OpenPrescribing combines practice size and location, CCG to practice relations and BNF codes for the raw prescribing data in order to make a comprehensive dataset which is easily interrogated to support research.
+                    <br /> <br /> We have downloaded a subset of the data accessible via OpenPrescribing and made some helpful dashboards to visualise prescribing data. Currently we have dashboards to display the total items prescribed and unique items, the average cost per prescribed item and the most prescribed item. These can be expanded in the future to include other useful metrics such as tracking the prescribing of certain medicines or analyse the prescribing patterns of certain practices.
+                    <br /> <br/> <b> The team </b> </br />
+                    <br /> We are a group of trainee Bioinformaticians, part of the National Scientific Training Porgramme (STP), working across England. If you have queries, feedback or any general comments, please get in touch with us at: example.email@domain.com
+                    <br/> <br/> The code for this website is open-source, licensed under the MIT License and can be accessed via our repository on GitHub: https://github.com/RSWilson1/angolan.
+                  </p>
                   <br />
                   <hr />
                    <button type="button" class="btn btn-danger" onclick="popup.hideAboutPopup();">Close</button>
