--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -184,11 +184,13 @@
                       <span class="text_col_black"></span>
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">{{ tile_data[1] }}</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">{{ tile_data[2] }}</div>
                           <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">%</div>
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: {{ tile_data[2] }}%" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
                       </div>
