--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -191,7 +191,7 @@
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow=int(tile_data[3]) style="width: 25%" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: {{ tile_data[3] }}%"></div>
                           </div>
                         </div>
                       </div>
@@ -211,7 +211,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">NUMBER OF UNIQUE ITEMS:</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800"> {{tile_data[4]}} </div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-fingerprint fa-2x text-gray-300"></i>
