Fixed merge for racheal and rob's changes.

--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -185,8 +185,7 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
                           <div class="h5 mb-0 font-weight-bold text-gray-800">{{ tile_data[2] }}</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">{{ tile_data[1] }}</div>
-                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">%</div>
+                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{ tile_data[3] }}%</div>
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
