--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -244,8 +244,46 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Infection treatment drug as % of all infection treatments</h6>
                 </div>
+                <br><br>
                 <div class="card-body">
-
+                  <h6 class="m-0 font-weight-bold text-primary">&nbsp;&nbsp;&nbsp;Antibiotics {{tile_data[6]}}%</h6>
+                  <div class="col">
+                    <div class="progress progress-sm mr-2">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{tile_data[6]}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="col">
+                    <h6 class="m-0 font-weight-bold text-primary">Antifungals {{tile_data[7]}}%</h6>
+                    <div class="progress progress-sm mr-2">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{tile_data[7]}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="col">
+                    <h6 class="m-0 font-weight-bold text-primary">Antivirals {{tile_data[8]}}%</h6>
+                    <div class="progress progress-sm mr-2">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{tile_data[8]}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="col">
+                    <h6 class="m-0 font-weight-bold text-primary">Antiprotozoals {{tile_data[9]}}%</h6>
+                    <div class="progress progress-sm mr-2">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{tile_data[9]}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="col">
+                    <h6 class="m-0 font-weight-bold text-primary">Anthelmintics {{tile_data[10]}}%</h6>
+                    <div class="progress progress-sm mr-2">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{tile_data[10]}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
 
