--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -244,7 +244,13 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Infection treatment drug as % of all infection treatments</h6>
                 </div>
-                <div class="card-body">
+                <div class="col">
+                  <div class="progress progress-sm mr-2">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: {{ tile_data[5] }}%" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+                <div class="card-body">                  
+                  <canvas id=""></canvas>                
 
                 </div>
               </div>
