--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -37,7 +37,81 @@
             barChart.drawChart({{pct|tojson}}, "bar-chart");
         });
   </script>
+
 </head>
+
+<!-- Functions to
+    and the
+-->
+  <script>
+      //function clears the creatinine calculator input fields when onclick = close
+        function clearFields() {
+            var rbSex = document.getElementsByName("sex");
+            var patientsAge = document.getElementById("patients-age");
+            var patientsWeight = document.getElementById("patients-weight");
+            var patientsCreat = document.getElementById("patients-serum");
+            var spResults = document.getElementById("spResults");
+            rbSex.value = document.getElementsByName("sex").checked = false;
+            patientsAge.value = "";
+            patientsWeight.value = "";
+            patientsCreat.value = "";
+            spResults.innerHTML = "";
+            spResults.style.visibility = "hidden";
+            }
+
+        //Function calculate the creatinine clearance with the inputted values
+        function performCalc() {
+            var rbSex = document.getElementsByName("sex");
+            var patientsAge = document.getElementById("patients-age");
+            var patientsWeight = document.getElementById("patients-weight");
+            var patientsCreat = document.getElementById("patients-serum");
+            var spResults = document.getElementById("spResults");
+            var Sex, weight, result;
+            spResults.style.visibility = "visible";
+
+            //assigns a numeric value depending on the sex input
+            for (var x = 0; x < rbSex.length; x++) {
+                    if (rbSex[x].checked) {
+                        Sex = rbSex[x].value;
+                        break;
+                    }
+                }
+
+            //Error messages to be returned if the values input are not supported.
+            //Age, weight and serum creatinine have a min and max value of 1 and 20 respectively
+            //For patients who are obese adjustments have to be made to the equation which is not yet supported in this
+            //calculator. This needs to factor in BMI which is currently not the case in this calculator.
+            if ((patientsAge.value)>120) {
+                        spResults.innerHTML = "* Please enter a valid age.";
+                        return;
+                    }
+            if ((patientsAge.value)<0) {
+                        spResults.innerHTML = "* Please enter a valid age.";
+                        return;
+                    }
+            if ((patientsWeight.value)>120) {
+                        spResults.innerHTML = "* This calculator does not currently support adjusments made for obese patients";
+                        return;
+                    }
+            if ((patientsWeight.value)<1) {
+                        spResults.innerHTML = "* Please enter a valid weight.";
+                        return;
+                    }
+            if ((patientsCreat.value)>120) {
+                        spResults.innerHTML = "* Serum Creatinine is too high, please check input.";
+                    }
+            else{ //if the inputs pass the above checks return the results of the calculation
+                if (parseInt(patientsAge.value) && parseInt(patientsWeight.value) && parseInt(patientsCreat.value)) {
+                weight = parseInt(patientsWeight.value);
+                result = ((((140 - parseInt(patientsAge.value)) * weight) / (72 * parseInt(patientsCreat.value))) * (Sex == "f" ? 0.85 : 1) * 100).toFixed(2);
+                spResults.innerHTML = result + " mL/min is your estimated creatinine clearance.";
+                console.log(rbSex.elements);
+                console.log(result + " mL/min is your estimated creatinine clearance.");
+                console.log(spResults)
+                }
+            }
+        }
+    </script>
 
 <body id="page-top">
 
@@ -118,6 +192,7 @@
                 </form>
               </div>
             </li>
+          </ul>
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
@@ -305,20 +380,52 @@
                     <label class="radio-inline">
                       <input type="radio" name="sex" value="f"> Female
                     </label>
+                    <span id="spSexErr"></span>
                     <p>Age of patient (years):</p>
-                    <input type="number" min="1" max="120" name="patients-age" />
+                    <input type="number" min="0" max="120" id="patients-age" />
+                    <span id="spAgeErr"></span>
                     <br /><br />
                     <p>Weight of patient (kg):</p>
-                    <input type="number" min="1" max="120" name="patients-weight" />
+                    <input type="number" min="1" max="120" id="patients-weight" />
+                    <span id="spWeightErr"></span>
                     <br /><br />
                     <p>Serum creatinine (micromol/L):</p>
-                    <input type="number" min="1" max="120" name="patients-serum" />
+                    <input type="number" min="1" max="120" id="patients-serum" />
+                    <span id="spCreatErr"></span>
                     <br />
                   </div>
                   <br />
                   <hr />
-                  <button type="button" class="btn btn-primary">Calculate</button>
-                  <button type="button" class="btn btn-danger" onclick="popup.hideCeatCalcFormPopup();">Close</button>
+                  <button type="button" class="btn btn-primary" onclick="performCalc();">Calculate</button>
+                  <button type="button" class="btn btn-danger" onclick="popup.hideCeatCalcFormPopup(); clearFields();">Close</button>
+                  <br><br>
+                  <span> Result: </span><span id="spResults"></span>
+                  <br><br>
+                    <span>Calculation information: This formula is applicable only if the serum creatinine is stable. Est. Creatinine Clearance = [[140 - age(yr)]*weight(kg)]/[72*serum Cr(mg/dL)] (multiply by 0.85 for women).</span>
+                    <br><br>
+                    <span>Normal Results</span>
+                    <br>
+                    <span>Males: 97 to 137 mL/min</span>
+                    <br>
+                    <span>Females: 88 to 128 mL/min</span>
+                  <hr>
+                  </div>
+                  <div class="card-header py-3">
+                    <h3 class="m-0 font-weight-bold text-primary">Literature</h3>
+                    <br>
+                    <div>
+                      <h5 class="m-0 font-weight-bold text-primary">Original/Primary Reference</h5>
+                        <br>
+                      <a href="http://www.ncbi.nlm.nih.gov/pubmed/1244564" class="resource" target=_blank">
+                          <span class="resource_img-wrapper">
+                              <img src="https://cdn-web-img.mdcalc.com/icons/resource-pubmed.png" alt="Research Paper">
+                          </span>
+                          <span class="resource_text">
+                              "Cockcroft DW, Gault MH. Prediction of creatinine clearance from serum creatinine. Nephron. 1976;16(1):31-41. PubMed PMID: 1244564."
+                          </span>
+                      </a>
+                  </div>
+                </div>
                 </div>
               </div>
           </div>
@@ -360,6 +467,7 @@
       </footer>
       <!-- End of Footer -->
 
+
     </div>
     <!-- End of Content Wrapper -->
 
@@ -376,6 +484,7 @@
 
   <!-- Custom scripts for all pages-->
   <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
+
 
 </body>
 
