changed colour for sidebar

--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -121,14 +121,13 @@
         }
     </script>
 
-                                                          
 <body id="page-top">
 
   <!-- Page Wrapper -->
   <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" style=background:#4d99db id="accordionSidebar">
 
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
@@ -484,40 +483,7 @@
                   </div>
                 </div>
 
-          <!-- Creatinine clearance calculator -->
-          <div id="creat-calc">
-            <div class="card">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Creatinine clearance calculator</h6>
-                </div>
-                <div class="card-body">
-                  <p>Sex of patient:</p>
-                  <div>
-                    <label class="radio-inline">
-                      <input type="radio" name="sex" value="m"> Male
-                    </label>
-                    <label class="radio-inline">
-                      <input type="radio" name="sex" value="f"> Female
-                    </label>
-                    <p>Age of patient (years):</p>
-                    <input type="number" min="1" max="120" name="patients-age" />
-                    <br /><br />
-                    <p>Weight of patient (kg):</p>
-                    <input type="number" min="1" max="120" name="patients-weight" />
-                    <br /><br />
-                    <p>Serum creatinine (micromol/L):</p>
-                    <input type="number" min="1" max="120" name="patients-serum" />
-                    <br />
-                  </div>
-                  <br />
-                  <hr />
-                  <button type="button" class="btn btn-primary">Calculate</button>
-                  <button type="button" class="btn btn-danger" onclick="popup.hideCeatCalcFormPopup();">Close</button>
-                </div>
-              </div>
-          </div>
 
-                  
           <!-- Creatinine clearance calculator -->
           <div id="creat-calc">
             <div class="card">
@@ -589,8 +555,7 @@
                 </div>
               </div>
           </div>
-                                                                                     
-                                                                                                       
+
           <!-- About popup -->
           <div id="about-box">
             <div class="card">
